--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -5,8 +5,7 @@
 
     <!-- You can insert your own image assets here -->
     <!-- <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@mipmap/launch_image" />
+        <bitmap android:gravity="center" android:src="@mipmap/launch_image" />
+        <bitmap android:src="@mipmap/launch_image" />
     </item> -->
 </layer-list>
